<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAuthPackages.JoinActivity"
    android:background="@color/newFirstColor"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/main_padding">

    <ImageView
        android:id="@+id/imageAuth"
        android:layout_width="300dp"
        android:layout_height="165dp"
        android:src="@drawable/app_icon"
        android:layout_marginTop="75dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="75dp"
        app:layout_constraintTop_toBottomOf="@id/imageAuth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvJoinRegButton"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_height"
            app:cardBackgroundColor="@color/newPrimaryColor"
            app:cardCornerRadius="@dimen/btn_card_radius"
            app:cardElevation="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/join_reg"
                android:textColor="@color/newWhiteColor"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvHaveAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_have_account"
            android:textSize="16sp"
            android:textColor="@color/customWhite"
            android:textAlignment="center"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/cvJoinRegButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvJoinLoginButton"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_height"
            app:cardBackgroundColor="@color/newSecondColor"
            app:cardCornerRadius="@dimen/btn_card_radius"
            app:cardElevation="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvHaveAccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/join_login"
                android:textColor="@color/customWhite"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"/>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>