<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="@color/lightBlack"
    android:id="@+id/createRoomLayout">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCreateRoomHeader"
        style="@style/AppTheme.CustomHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/name_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_activity_name"
            android:textSize="24sp"
            android:textColor="@color/customWhite"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"/>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/main_padding"
        android:paddingEnd="@dimen/main_padding"
        app:layout_constraintTop_toBottomOf="@id/cvCreateRoomHeader">

        <TextView
            android:id="@+id/tvWriteRoomName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_name"
            android:textSize="20sp"
            android:textColor="@color/customWhite"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvRoomName"
            style="@style/AppTheme.EditText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintTop_toBottomOf="@id/tvWriteRoomName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                style="@style/AppTheme.EditText"
                android:id="@+id/etRoomName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/room_name_hint"
                android:inputType="text" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvChooseSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_subject"
            android:textSize="20sp"
            android:textColor="@color/customWhite"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/cvRoomName"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvSpinner"
            style="@style/AppTheme.EditText"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintTop_toBottomOf="@id/tvChooseSubject"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Spinner
                android:id="@+id/subjectsSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/subjects"
                android:background="@color/darkBlack"
                android:backgroundTint="@color/darkBlack"
                android:spinnerMode="dialog" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvGamerCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_gamer_count"
            android:textSize="20sp"
            android:textColor="@color/customWhite"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/cvSpinner"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:theme="@style/SeekBarColor"
            android:id="@+id/sbGamerCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:progress="2"
            app:layout_constraintTop_toBottomOf="@id/tvGamerCount"
            app:layout_constraintEnd_toStartOf="@+id/tvCount"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="4"
            android:textSize="26sp"
            android:textColor="@color/customWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGamerCount" />

        <!--
        <androidx.cardview.widget.CardView
            android:id="@+id/cvDateView"
            style="@style/AppTheme.EditText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintTop_toBottomOf="@id/tvCount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                style="@style/AppTheme.EditText"
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/room_set_dateAndTime"
                android:textSize="16sp"
                android:textColor="@color/customWhite"
                android:textIsSelectable="true"/>

        </androidx.cardview.widget.CardView>
        -->

        <androidx.cardview.widget.CardView
            android:id="@+id/cvBtnCreateRoom"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_height"
            app:cardBackgroundColor="@color/customWhite"
            app:cardCornerRadius="6dp"
            app:cardElevation="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvCount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Продолжить"
                android:textColor="@color/lightBlack"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"/>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/main_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvBtnCreateBack"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/mini_btn_height"
            app:cardBackgroundColor="@color/darkBlack"
            app:cardCornerRadius="6dp"
            app:cardElevation="0dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/room_create_back"
                android:textColor="@color/customWhite"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textAlignment="center"/>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>