<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAuthPackages.Reg.RegActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="@color/newFirstColor"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:id="@+id/regLayout">

    <!-- Action Bar -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvAuthText"
        style="@style/AppTheme.CustomHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvRegBackToJoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/newSecondColor"
                app:cardElevation="0dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_back"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ui_back_arrow"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tv_back"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <TextView
                        android:id="@+id/tv_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_back"
                        android:textSize="20sp"
                        android:textColor="@color/newPrimaryColor"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_back"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/name_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_title"
                android:textSize="24sp"
                android:textColor="@color/customWhite"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <!-- Gray Line -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:cardBackgroundColor="@color/newDarkGrayColor"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/cvAuthText"/>

    <!-- Main Info -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/main_padding"
        app:layout_constraintTop_toBottomOf="@id/cvAuthText">

        <!-- Icon, Name and Surname -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cvImageInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            app:cardBackgroundColor="@color/newSecondColor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvIconTask">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/userImage"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="15dp"
                    android:src="@mipmap/room_icon_0"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/clNameSurname"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clNameSurname"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toEndOf="@id/userImage"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvName"
                        style="@style/AppTheme.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="4dp"
                        app:cardElevation="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/cvSurname"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <EditText
                            style="@style/AppTheme.EditText"
                            android:id="@+id/etName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/reg_name"/>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        app:cardBackgroundColor="@color/newDarkGrayColor"
                        app:cardElevation="0dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="12dp"
                        app:layout_constraintTop_toBottomOf="@id/cvName"
                        app:layout_constraintBottom_toTopOf="@id/cvSurname"/>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvSurname"
                        style="@style/AppTheme.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="4dp"
                        app:cardElevation="0dp"
                        app:layout_constraintTop_toBottomOf="@id/cvName"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <EditText
                            style="@style/AppTheme.EditText"
                            android:id="@+id/etSurname"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/reg_surname"/>

                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvIconTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_icon_task"
            android:textColor="@color/newWhiteColor"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@id/cvImageInfo"/>

        <!-- Email Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cvEmail"
            style="@style/AppTheme.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintTop_toBottomOf="@id/tvIconTask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/ivEmailIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/email"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/etEmail"/>

                <EditText
                    style="@style/AppTheme.EditText"
                    android:id="@+id/etEmail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:hint="@string/reg_email"
                    android:inputType="textEmailAddress"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@id/ivEmailIcon"
                    app:layout_constraintStart_toEndOf="@id/ivEmailIcon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/ivEmailIcon"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvWAY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Кто вы?"
            android:textSize="16sp"
            android:textColor="@color/customWhite"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/cvEmail"
            app:layout_constraintStart_toStartOf="@id/cvImageInfo"
            app:layout_constraintBottom_toTopOf="@id/cvTeacher"/>

        <!-- Teacher Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cvTeacher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            app:cardCornerRadius="5dp"
            app:contentPadding="10dp"
            app:layout_constraintStart_toStartOf="@id/cvImageInfo"
            app:layout_constraintEnd_toStartOf="@id/cvStudent"
            app:layout_constraintTop_toBottomOf="@id/tvWAY">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/reg_teacher"
                android:textColor="@color/customWhite"
                android:gravity="center"
                android:textSize="18sp"/>

        </androidx.cardview.widget.CardView>

        <!-- Student Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cvStudent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="5dp"
            app:contentPadding="10dp"
            app:layout_constraintStart_toEndOf="@id/cvTeacher"
            app:layout_constraintEnd_toEndOf="@id/cvImageInfo"
            app:layout_constraintTop_toBottomOf="@id/tvWAY">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/reg_student"
                android:textColor="@color/customWhite"
                android:gravity="center"
                android:textSize="18sp"/>

        </androidx.cardview.widget.CardView>

        <!-- Proceed Button-Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cvGoProceedButton"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_height"
            app:cardBackgroundColor="@color/newPrimaryColor"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/cvStudent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/reg_proceed"
                android:textColor="@color/newWhiteColor"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"/>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>